Fix incomplete table.vertical styles causing broken layout
On the "keymanagement" page, clicking "Expand" to show a full SSH key
would break the page layout completely, as the key would not be
line-wrapped.

I'm not sure how exactly that happens, but adjusting this selector to
also set 'display: block' on 'table.vertical' fixes it.

--- a/src/bitu/static/css/bitu-codex.css
+++ b/src/bitu/static/css/bitu-codex.css
@@ -336,7 +336,7 @@ table.vertical {
     width: 100%;
 }
 
-table.vertical thead.vertical, tbody.vertical, th.vertical, td.vertical, tr.vertical {
+table.vertical, thead.vertical, tbody.vertical, th.vertical, td.vertical, tr.vertical {
     display: block;
 }
 
